fix to alignment of subject and body in mobile and tablets in vertical mode

--- a/assets/css/setup/mq.css
+++ b/assets/css/setup/mq.css
@@ -112,6 +112,17 @@
     width: 105.2%;
 
   }
+
+  .mails-time-actions {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+    justify-items: end;
+    align-items: center;
+
+    gap: 1em;
+    /* width: 60%; */
+  }
 }
 
 /* Mobile */
@@ -238,5 +249,22 @@
 
   #body {
     width: 20%;
+  }
+
+  .mails-info {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+
+  .mails-time-actions {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+    justify-items: end;
+    align-items: center;
+
+    gap: 1em;
+    /* width: 60%; */
   }
 }
